Fix All Photos: use POST /search/metadata API, fix mobile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -677,7 +677,11 @@
     }
 
     .immich-assets {
-        padding-top: 70px;
+        padding: 16px;
+    }
+
+    .immich-placeholder {
+        padding-top: 0;
     }
 }
 
